[package]
name = "css-parser-project"
version = "0.1.0"
edition = "2021"
license = "MIT"  
authors = ["Олександра <o.prokopchuk@ukma.edu.ua>"]
description = "This is a parser, developed on Rust, that will take CSS code and parse it, based on adjusted rules."

[dependencies]
anyhow = "1.0.93"
clap = "4.5.20"
pest = "2.7.14"
pest_derive = "2.7.14"
regex = "1.11.1"
